# HAL

./: CHANGELOG.md
app/: main.cpp
include/hal_core/netlist/: netlist.h  netlist_factory.h
include/hal_core/plugin_system/: plugin_interface_cli.h  plugin_manager.h
include/hal_core/utilities/: hal_file_manager.h  log.h  utils.h
plugins/: .gitignore
plugins/bitstream_converter/: CMakeLists.txt  fasm2bels-CMakeLists.txt.in
plugins/bitstream_converter/include/bitstream_converter/: plugin_bitstream_converter.h
plugins/bitstream_converter/python/: python_bindings.cpp
plugins/bitstream_converter/src/: plugin_bitstream_converter.cpp
plugins/bitstream_parser/: CMakeLists.txt
plugins/bitstream_parser/include/bitstream_parser/: empty_hdl_parser.h  hdl_parser_bitstream.h  plugin_bitstream_parser.h
plugins/bitstream_parser/src/: hdl_parser_bitstream.cpp  plugin_bitstream_parser.cpp  plugin_bitstream_parsers.cpp
plugins/dataflow_analysis/: analyze.py  configuration.py  control.py  generate_overview.py
plugins/dataflow_analysis/paper_scripts/: configuration.py
plugins/dataflow_analysis/src/: plugin_dataflow.cpp
plugins/gui/src/: plugin_gui.cpp
plugins/hgl_parser/src/: hgl_parser.cpp
plugins/hgl_writer/src/: hgl_writer.cpp
plugins/liberty_parser/src/: liberty_parser.cpp
plugins/python_shell/src/: plugin_python_shell.cpp
plugins/solve_fsm/src/: plugin_solve_fsm.cpp
plugins/vhdl_verilog_parsers/src/: hdl_parser_verilog.cpp  hdl_parser_vhdl.cpp
plugins/z3_utils/include/: z3Wrapper.h
src/netlist/: netlist.cpp  netlist_factory.cpp
src/plugin_system/: plugin_manager.cpp
src/utilities/: hal_file_manager.cpp  log.cpp  utils.cpp
(+92 files in other folders)
